fix: increase z-index on add-to-calendar dropdown

--- a/admin/js/blocks/Blocks/AddToCalendar/addToCalendar.scss
+++ b/admin/js/blocks/Blocks/AddToCalendar/addToCalendar.scss
@@ -23,6 +23,7 @@
     flex-direction: column;
     position: absolute;
     width: inherit;
+    z-index: 1;
   }
 }
 
